[package]
name = "wakeonlan"
authors = ["Nguyen Thai <shiroemon279@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
mac_address = "1.1.5"
miette = { version = "5.10.0", features = ["fancy"] }
